--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,21 @@
 {
+  "trailingComma": "es5",
   "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 120,
+  "endOfLine": "auto",
+  "arrowParens": "always",
+  "overrides": [
+    {
+      "files": "{**/*,*}.{js,jsx,ts,tsx,json,md,mdx}",
+      "excludeFiles": [
+        "**/node_modules/**",
+        "**/dist/**",
+        "**/build/**",
+        "**/coverage/**",
+        "**/public/**",
+        "**/*.d.ts"
+      ],
+      "options": { "requirePragma": false }
+    }
+  ]
 }
