--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "singleQuote": true,
   "printWidth": 120,
   "endOfLine": "auto",
-  "arrowParens": "always",
+  "arrowParens": "avoid",
   "overrides": [
     {
       "files": "{**/*,*}.{js,jsx,ts,tsx,json,md,mdx}",
